--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@mastra/libsql": "^0.16.1",
     "@mastra/loggers": "^0.10.18",
     "@mastra/memory": "^0.15.10",
+    "hono": "^4.10.4",
     "zod": "^4.1.12"
   },
   "devDependencies": {
